# ST20Emu

./: .clang-format  .gitattributes  .gitignore  COMMANDS.C  MEMORY.H  Makefile  OMR.cpp  OMR.h  README.md  STi5518_RegisterDB.h  STi5518_SearchDB.h  commands.c  commands.cpp  commands.h  defines.h  justfile  memory.c  memory.h  meson.build  mise.toml  omr.cpp  omr.h  st20.c  st20.h  st20emu.cpp  st20emu.h  st20emu.ini  stdafx.cpp  stdafx.h
firmware/: pad.sh
ideas/: cpu_memory.cpp  io.cpp
manuals/STLite/: README.md
rfcs/: rfc-1.md
src/: STi5518_Region0.h  STi5518_Registers_Defines.h  STi5518_SearchDB.h  defines.h  main.cpp  main.h  memory.c  memory.h  omr.cpp  omr.h  st20.c  st20.h  st20emu.cpp  st20emu.h
src/cli/: cli_commands.cpp  cli_commands.h  cli_engine.cpp  cli_engine.h  cli_state.cpp  cli_state.h  cli_types.h  commands_core.cpp
src/cli/cmds/: control.cpp  memory.cpp  registers.cpp
src/common/: compat.h
src/core/cpu/: instrentry.c  instructions.c  omr.cpp  st20.c  st20.h
src/core/memory/: memory.c  memory.h
src/soc/sti5518/: STi5518_Region0.h  STi5518_RegisterDB.h  STi5518_Registers.h  STi5518_SearchDB.cpp  STi5518_SearchDB.h
